# thermo

./: CMakeLists.txt  Makefile  configure-build-test.sh  main.cpp
.github/workflows/: cicd.yml
src/: Clock.cpp  Clock.h  Heater.h  Heater.hpp  HeaterInteractor.cpp  HeaterInteractor.h  TemperatureSensor.h  TemperatureSensor.hpp  myfile.cpp  myfile.h
src/clock/: Clock.cpp  Clock.h  IClock.h
src/heater/: Heater.cpp  Heater.h  HeaterInteractor.cpp  HeaterInteractor.h  IHeater.h
src/instances/: Instances.cpp  Instances.h
src/objects/: Objects.cpp  Objects.h
src/system/: ISystem.h  System.cpp  System.h  SystemTimePoint.h
src/temperature_sensor/: ITemperatureSensor.h  TemperatureSensor.cpp  TemperatureSensor.h
tests/: HeaterInteractor_test.cpp  myfile_test.cpp
tests/mocks/: MockClock.h  MockHeater.h  MockSystem.h  MockTemperatureSensor.h
